--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -84,6 +84,9 @@ producto.imagen=image path
 producto.listado=Product List
 producto.precio=Price
 producto.total=Total Products
+producto.precio.inferior=Lowes Price
+producto.precio.superior=Top Price
+producto.ampliadas=Extended Queries
 pruebas.ampliadas=Extended Queries
 pruebas.jpql=JPQL Queries
 pruebas.nativo=Native Queries
