--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -83,6 +83,9 @@ producto.imagen=Chemin de l'image
 producto.listado=Liste de produits
 producto.precio=Prix
 producto.total=Produits totaux
+producto.precio.inferior=Prix \u200b\u200binf\u00e9rieur
+producto.precio.superior=Prix \u200b\u200bplus \u00e9lev\u00e9
+producto.ampliadas=Consultations \u00e9largies
 pruebas.ampliadas=Consultations \u00e9largies
 pruebas.jpql=Requ\u00eates JPQL
 pruebas.nativo=Requ\u00eates natives
