--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -83,6 +83,9 @@ producto.imagen=Caminho da imagem
 producto.listado=Lista de produtos
 producto.precio=Pre\u00e7o
 producto.total=Total de produtos
+producto.precio.inferior=Menor pre\u00e7o
+producto.precio.superior=Pre\u00e7o mais elevado
+producto.ampliadas=Consultas Expandidas
 pruebas.ampliadas=Consultas Expandidas
 pruebas.jpql=Consultas JPQL
 pruebas.nativo=Consultas nativas
