--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -85,6 +85,9 @@ producto.imagen=Ruta de la imagen
 producto.listado=Listado de Productos
 producto.precio=Precio
 producto.total=Total Productos
+producto.precio.inferior=Precio Inferior
+producto.precio.superior=Precio Superior
+producto.ampliadas=Consultas Ampliadas
 pruebas.ampliadas=Consultas Ampliadas
 pruebas.jpql=Consultas JPQL
 pruebas.nativo=Consultas Nativas
